Fix mailbox leak in PPB_Graphics3D_Impl

PPB_Graphics3D_Impl::ReturnFrontBuffer is supposed to return the mailbox
into mailboxes_to_reuse_, but somehow that line got accidentally
removed, forcing creation of a new mailbox on every swap, causing a
logical leak.

Bug: 762860
Change-Id: I35fe4852c6cf0f42084999256fff1bb01b391359
Reviewed-on: https://chromium-review.googlesource.com/669774
Reviewed-by: Erik Chen <erikchen@chromium.org>
Commit-Queue: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502438}
Former-commit-id: cc0169cd1b636d8cd1c949289242d63e5a554504